[package]
name = "concat-ids"
version = "0.1.0"
authors = ["Rail Khusnutdinov <mail@rail-ka.ru>"]
description = "concat numbers to byte array"
#keywords = []
#categories = []
license = "MIT OR Apache-2.0"
homepage = "https://github.com/libfunc/concat-ids/"
documentation = "https://docs.rs/concat-ids/"
repository = "https://github.com/libfunc/concat-ids/"
readme = "README.md"
edition = "2021"

[lib]
name = "concat_ids"
path = "src/lib.rs"

[dependencies]
seq-macro = "0.3"
